--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
   <h2>📚 Leggi le opere di Aoi Kotori:</h2>
   <ul>
+    <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo Quotev: AoiKotori</a></li>
     <li><a href="https://www.wattpad.com/user/AoiKotori" target="_blank">Profilo Wattpad: @AoiKotori</a></li>
     <li><a href="https://www.amazon.it/dp/B0FDDCGPFJ " target="_blank">Il Velvet Whip Club – eBook</a></li>
     <li><a href="https://www.amazon.it/dp/B0FDGPGJCX" target="_blank">Il Velvet Whip Club – Cartaceo</a></li>
