--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Aoi Kotori – Sito Ufficiale</title>
+  <title>Aoi Kotori Scrittrice– Sito Ufficiale 2</title>
   <style>
   body {
     background-color: #000;
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-  <h1>Aoi Kotori</h1>
+  <h1>Aoi Kotori: Scrittrice</h1>
 
   <img src="avatara.jpg" alt="Aoi Kotori">
 
