--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Aoi Kotori Scrittrice – Sito Ufficiale</title>
+  <title>Aoi Kotori – Sito Ufficiale</title>
+  <meta name="description" content="Sito ufficiale di Aoi Kotori, Scrittrice.">
+  <meta name="keywords" content="Aoi Kotori, romanzi erotici, BDSM, narrativa psicologica, Il Velvet Whip Club, dark romance, scrittrice indipendente, scrittrice italiana, erotismo, spiritualità laica">
+  <meta name="author" content="Aoi Kotori">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Open Graph per anteprime social -->
+  <meta property="og:title" content="Aoi Kotori – Il Velvet Whip Club e altri romanzi psicologici">
+  <meta property="og:description" content="Romanzi erotico-psicologici di Aoi Kotori. Scopri il Velvet Whip Club e altre opere che esplorano desiderio, vergogna e identità.">
+  <meta property="og:image" content="https://aoikotori.neocities.org/avatara.jpg">
+  <meta property="og:url" content="https://aoikotori.neocities.org">
+  <meta property="og:type" content="website">
+
+  <!-- Stile -->
   <style>
   body {
     background-color: #000;
@@ -28,8 +41,7 @@
   a:hover {
     text-decoration: underline;
   }
-</style>
-
+  </style>
 </head>
 <body>
   <h1>Aoi Kotori: Scrittrice</h1>
