--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <!-- Open Graph per anteprime social -->
   <meta property="og:title" content="Aoi Kotori – Il Velvet Whip Club e altri romanzi psicologici">
-  <meta property="og:description" content="Romanzi erotico-psicologici di Aoi Kotori. Scopri il Velvet Whip Club e altre opere che esplorano desiderio, vergogna e identità.">
-  <meta property="og:image" content="https://aoikotori.neocities.org/avatara.jpg">
-  <meta property="og:url" content="https://aoikotori.neocities.org">
+  <meta property="og:description" content="Romanzi di Aoi Kotori. Scopri tutte le opere di questa autrice indipendente.">
+  <meta property="og:image" content="https://aoikotori.github.io/avatara.jpg">
+  <meta property="og:url" content="https://aoikotori.github.io">
   <meta property="og:type" content="website">
 
   <!-- Stile -->
