--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Open Graph per anteprime social -->
   <meta property="og:title" content="Aoi Kotori – Il Velvet Whip Club e altri romanzi psicologici">
   <meta property="og:description" content="Romanzi di Aoi Kotori. Scopri tutte le opere di questa autrice indipendente.">
-  <meta property="og:image" content="https://aoikotori.github.io/avatara.jpg">
+  <meta property="og:image" content="https://aoikotori.github.io/avatarw.jpg">
   <meta property="og:url" content="https://aoikotori.github.io">
   <meta property="og:type" content="website">
 
@@ -64,6 +64,8 @@
 
   <h2>📚 Leggi le opere di Aoi Kotori:</h2>
   <ul>
+    <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo Instagram: @aoikotori_writer</a></li>
+    <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo TikTok: @aoikotori_writer</a></li>
     <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo Quotev: AoiKotori</a></li>
     <li><a href="https://www.wattpad.com/user/AoiKotori" target="_blank">Profilo Wattpad: @AoiKotori</a></li>
     <li><a href="https://www.amazon.it/dp/B0FDDCGPFJ " target="_blank">Il Velvet Whip Club – eBook</a></li>
