--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Open Graph per anteprime social -->
   <meta property="og:title" content="Aoi Kotori – Il Velvet Whip Club e altri romanzi psicologici">
   <meta property="og:description" content="Romanzi di Aoi Kotori. Scopri tutte le opere di questa autrice indipendente.">
-  <meta property="og:image" content="https://aoikotori.github.io/avatarw.jpg">
+  <meta property="og:image" content="https://aoikotori.github.io/aoi.jpg">
   <meta property="og:url" content="https://aoikotori.github.io">
   <meta property="og:type" content="website">
 
