--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <h1>Aoi Kotori: Scrittrice</h1>
 
-  <img src="avatara.jpg" alt="Aoi Kotori">
+  <img src="aoi.jpg" alt="Aoi Kotori">
 
   <p><em>"Scrivo per non implodere. E quando implodo, scrivo ancora."</em></p>
   
