--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
   <h2>📚 Leggi le opere di Aoi Kotori:</h2>
   <ul>
-    <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo Instagram: @aoikotori_writer</a></li>
-    <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo TikTok: @aoikotori_writer</a></li>
+    <li><a href="https://www.instagram.com/aoikotori_writer" target="_blank">Profilo Instagram: @aoikotori_writer</a></li>
+    <li><a href="https://www.tiktok.com/@aoikotori_writer" target="_blank">Profilo TikTok: @aoikotori_writer</a></li>
     <li><a href="https://www.quotev.com/AoiKotori" target="_blank">Profilo Quotev: AoiKotori</a></li>
     <li><a href="https://www.wattpad.com/user/AoiKotori" target="_blank">Profilo Wattpad: @AoiKotori</a></li>
     <li><a href="https://www.amazon.it/dp/B0FDDCGPFJ " target="_blank">Il Velvet Whip Club – eBook</a></li>
