--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <li><a href="https://www.amazon.it/dp/B0DW99MBYK" target="_blank">Anime e Manga: Antropologia della Cultura Pop Giapponese – Cartaceo</a></li>
     <li><a href="https://www.amazon.it/dp/B0DSCP2NMY" target="_blank">Cuori di Silicio – Cartaceo</a></li>
   </ul>
-    <p>Copyright Aoi Kotori 2025 - aoikotori@blu.it - Instagram: aoikotori_writer - TikTok: @aoikotori_writer</p>
+    <p>Copyright Aoi Kotori 2025 - aoikotori@blu.it - Instagram: aoikotori_writer</p>
 </body>
 </html>
 
